# ProtoPrototype

./: .gitignore  Procfile  build.sh  manage.py  pyproject.toml  requirements.txt
administrator/: views.py
administrator/templates/administrator/: index.html
betreiber/: admin.py  models.py  views.py
betreiber/migrations/: 0001_initial.py  0002_alter_benutzerkonto_id.py
betreiber/templates/betreiber/: index.html
myprototype/: apps.py  models.py  urls.py  views.py
myprototype/migrations/: 0001_initial.py
myprototype/static/myprototype/: voice recorder.js  voice.js  voice2.js
myprototype/templates/myprototype/: index.html
protoprototype/: asgi.py  settings.py  urls.py  wsgi.py
